# panelapp-link

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .loc-allowlist  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  Makefile  README.md  claude-desktop-config.json  container-release.json  mcp_server.py  pyproject.toml  server.py
.claude/projects/-home-bernt-popp-development-panelapp-link/memory/: v0.3.0-beyond-9-complete.md
.claude/skills/fastapi-route-change/: SKILL.md
.claude/skills/mcp-tool-change/: SKILL.md
.claude/skills/release-readiness/: SKILL.md
.github/workflows/: ci.yml  conformance.yml  container-ci.yml  container-security.yml  release.yml  security.yml
docker/: Dockerfile  docker-compose.npm.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh
docs/: architecture.md  configuration.md  data-lifecycle.md  deployment.md  usage.md
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-06-16-panelapp-link.md  2026-06-17-panelapp-link-9plus.md  2026-06-17-panelapp-link-v0.3.0.md
docs/superpowers/specs/: 2026-06-16-panelapp-link-design.md  2026-06-17-panelapp-link-9plus-design.md  2026-06-17-panelapp-link-v0.3.0-design.md
panelapp_link/: __init__.py  config.py  constants.py  exceptions.py  logging_config.py  server_manager.py
panelapp_link/api/: client.py  url_guard.py
panelapp_link/data/: __init__.py  repository.py  schema.sql
panelapp_link/ingest/: builder.py  cli.py  downloader.py  lock.py
panelapp_link/mcp/: annotations.py  capabilities.py  envelope.py  facade.py  log_filters.py  middleware.py  next_commands.py  rate_limit.py  resources.py  schemas.py  service_adapters.py  untrusted_content.py
panelapp_link/mcp/tools/: __init__.py  _args.py  aggregations.py  discovery.py  genes.py  panels.py
panelapp_link/models/: enums.py  inputs.py  records.py
panelapp_link/observability/: __init__.py  metrics.py  telemetry.py  tracing.py
panelapp_link/services/: _live_helpers.py  aggregations.py  cache.py  panelapp_service.py  refresh.py  shaping.py
scripts/: check_file_size.py
tests/: conftest.py  test_aggregations_batch.py  test_aggregations_compare.py  test_api_client.py  test_app.py  test_args.py  test_cache.py  test_capabilities.py  test_capabilities_tools.py  test_capabilities_wording.py  test_cli.py  test_confidence_count_consistency.py  test_confidence_counts.py  test_config.py  test_constants.py  test_cors.py  test_data_lifecycle.py  test_docker_compose_loopback.py  test_dockerfile_bootstrap.py  test_envelope.py  test_envelope_lean_meta.py  test_envelope_observability.py  test_hgnc_curie_rejected.py  test_host_origin_guard.py  test_ingest.py  test_live_helpers.py  test_logging.py  test_metrics.py  test_middleware.py  test_next_commands.py  test_next_commands_aggregations.py  test_panel_id_validation.py  test_rate_limit.py  test_refresh.py  test_repository.py  test_server_manager.py  test_service.py  test_service_adapters.py  test_service_observability.py  test_shaping.py  (+12 more)
tests/conformance/: conftest.py  test_contract_truth_v1.py  test_transport_mode.py
tests/fixtures/: au_genes_pkd1.json  au_panel_3149.json  au_panels_page1.json  uk_panel_1207.json  uk_panel_285.json  uk_panels_page1.json  uk_signedoff_page1.json
tests/unit/: test_docs_contract.py  test_readme_region_contract.py  test_readme_tools.py  test_region_enum_contract.py  test_response_envelope_v1.py  test_tool_names.py  test_version_single_source.py
tests/unit/mcp/: test_error_leak_fencing.py  test_error_sanitation.py  test_notfound_guard.py  test_notfound_guard_otel.py  test_untrusted_content.py  test_untrusted_content_fencing.py
